<resources>
    <string name="app_name">大众免费阅读</string>
    <string name="app_nomore">没有更多内容了</string>
    <string name="app_sharegold">分享得金币</string>
    <string name="app_noresult">暂无结果～</string>
    <string name="splashactivity_skip"> 跳过 </string>
    <string name="splashactivity_nonet">当前无网络连接</string>
    <string name="splashactivity_cancle"> 取消 </string>
    <string name="splashactivity_set"> 设置 </string>
    <string name="firstStartactivity_welcome">你终于来了</string>
    <string name="firstStartactivity_choosesex">现在快选择你的性别吧</string>
    <string name="firstStartactivity_zongyounixihuan">总有你喜欢</string>
    <string name="firstStartactivity_chooseclassfy">请选择你喜欢的书库</string>
    <string name="firstStartactivity_dutedeni">独特的你</string>
    <string name="firstStartactivity_choosebooks">请选择你感兴趣的书籍</string>
    <string name="MainActivity_exit">再按一次退出程序</string>
    <string name="MainActivity_shujia">书架</string>
    <string name="MainActivity_shuchen">书城</string>
    <string name="MainActivity_faxian">发现</string>
    <string name="MainActivity_my">我的</string>
    <string name="Discover_end">活动已结束</string>
    <string name="MainActivity_holdon">再等等</string>
    <string name="MainActivity_nowupdate">立即更新</string>
    <string name="noverfragment_xiaoshuo">小说</string>
    <string name="noverfragment_manhua">漫画</string>
    <string name="ReadHistoryFragment_shangchu">删除</string>
    <string name="ReadHistoryFragment_yishanchus">已删除%s话</string>
    <string name="ReadHistoryFragment_qurenshanchu">确认删除</string>
    <string name="noverfragment_sign">签到</string>
    <string name="noverfragment_allchoose">全选</string>
    <string name="noverfragment_yuedulishi">历史记录</string>
    <string name="noverfragment_shanchushuji2">删除(%d)</string>
    <string name="noverfragment_goonread">继续阅读</string>
    <string name="noverfragment_nobooks">书架空空~</string>
    <string name="noverfragment_gostore">去书城逛逛</string>
    <string name="AnnounceActivity_title">公告</string>
    <string name="ReadHistoryFragment_loginlook">登录后查看阅读历史记录</string>
    <string name="ReadHistoryFragment_gologin">去登录</string>
    <string name="ReadHistoryFragment_total_chapter">更新至第%s章</string>
    <string name="ReadHistoryFragment_noread">还未阅读任何书籍</string>
    <string name="storeFragment_more">更多</string>
    <string name="storeFragment_huanyihuan">换一换</string>
    <string name="storeFragment_boy">男生</string>
    <string name="storeFragment_gril">女生</string>
    <string name="storeFragment_fenlei">分类</string>
    <string name="storeFragment_paihang">榜单</string>
    <string name="storeFragment_baoyue">会员</string>
    <string name="storeFragment_wanben">完结</string>
    <string name="storeFragment_xianmian">免费</string>
    <string name="storeFragment_lookmore">查看更多</string>
    <string name="public_sure">确定</string>
    <string name="public_close">返回</string>
    <string name="app_version">当前版本:</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉载入更多</string>
    <string name="release_to_load">释放立即载入</string>
    <string name="loading">正在载入...</string>
    <string name="load_succeed">载入成功</string>
    <string name="load_fail">加载失败</string>
    <string name="user_login">登录 / 注册</string>
    <string name="MineNewFragment_chongzhi">%s充值</string>
    <string name="MineNewFragment_song">送%s</string>
    <string name="MineNewFragment_kaitongVIP">我的VIP</string>
    <string name="MineNewFragment_shuping">我的评论</string>
    <string name="MineNewFragment_friend">邀请好友</string>
    <string name="MineNewFragment_fankui">意见反馈</string>
    <string name="MineNewFragment_lianxikefu">联系客服</string>
    <string name="MineNewFragment_set">设置</string>
    <string name="MineNewFragment_fuli">福利中心</string>
    <string name="MineNewFragment_nologin">未登录</string>
    <string name="SettingsActivity_nomark">在手机上没有找到应用市场哦！</string>
    <string name="SettingsActivity_clear">清除缓存</string>
    <string name="SettingsActivity_clearSeccess">清除缓存成功</string>
    <string name="SettingsActivity_market">好评支持</string>
    <string name="SettingsActivity_friend">推荐给朋友</string>
    <string name="SettingsActivity_language">语言切换</string>
    <string name="SettingsActivity_adout">关于</string>
    <string name="SettingsActivity_tongbu">使用3G/4G同步书架</string>
    <string name="SettingsActivity_antobuy">自动购买下一章</string>
    <string name="SettingsActivity_exit">退出登录</string>
    <string name="SettingsActivity_zhcn">简体中文</string>
    <string name="SettingsActivity_zhhk">繁体中文</string>
    <string name="SettingsActivity_EN">English</string>
    <string name="SettingsActivity_cleanhuancun">是否清除缓存信息</string>
    <string name="SettingsActivity_updatename">修改昵称</string>
    <string name="dialog_lookcomicset_fanye_text1">点击翻页</string>
    <string name="dialog_lookcomicset_fanye_text2">打开后可点击屏幕上下方翻页</string>
    <string name="dialog_lookcomicset_fanye_yejian">夜间模式</string>
    <string name="AboutActivity_title">软件许可及服务协议</string>
    <string name="AboutActivity_title2">联系我们</string>
    <string name="AboutActivity_Email">已复制Email到剪贴板</string>
    <string name="AboutActivity_QQ">已复制QQ到剪贴板</string>
    <string name="AboutActivity_weixin2">已复制微信号到剪贴板</string>
    <string name="AboutActivity_telephone">已复制电话号码到剪贴板</string>
    <string name="AboutActivity_xieyi">用户协议</string>
    <string name="AboutActivity_phone">客服电话</string>
    <string name="AboutActivity_Email2">Email</string>
    <string name="AboutActivity_QQ2">QQ</string>
    <string name="AboutActivity_QQ_Group">QQ群</string>
    <string name="UserInfoActivity_title">个人资料</string>
    <string name="UserInfoActivity_weizhi">未知</string>
    <string name="UserInfoActivity_boy">男</string>
    <string name="UserInfoActivity_gril">女</string>
    <string name="UserInfoActivity_namenonull">昵称不能为空</string>
    <string name="UserInfoActivity_bangdingyes">绑定成功</string>
    <string name="UserInfoActivity_touxiang">头像</string>
    <string name="UserInfoActivity_nicheng">昵称</string>
    <string name="UserInfoActivity_sex">性别</string>
    <string name="UserInfoActivity_phone">手机号</string>
    <string name="UserInfoActivity_weixin">微信</string>
    <string name="FeedBackActivity_title">意见回馈</string>
    <string name="FeedBackActivity_tijiao">提交</string>
    <string name="FeedBackActivity_some">写点什么吧</string>
    <string name="FeedBackActivity_des">请详细描述您遇到的问题并告知具体操作步骤，我们会尽快答复您的问题哦～</string>
    <string name="MineCommentListActivity_title">我的评论</string>
    <string name="SearchActivity_hotsearch">热门搜索</string>
    <string name="SearchActivity_hotrank">热搜榜</string>
    <string name="liushuijilu_title">流水记录</string>
    <string name="BaoyueActivity_title">会员中心</string>
    <string name="BaoyueActivity_kaitong">立即开通</string>
    <string name="BaoyueActivity_yikaitong">续费充值</string>
    <string name="BaoyueActivity_nologin">未登录</string>
    <string name="BaoyueActivity_mianfei">开通会员免费畅读会员书库</string>
    <string name="BaoyueActivity_baoyueshuku">会员书库</string>
    <string name="BaoyueActivity_baoyueshuku2">开通会员免费读</string>
    <string name="BaoyueActivity_zunxiangtequan">尊享特权</string>
    <string name="BaoyueActivity_zunxiangtequan2">书架扩容享折扣</string>
    <string name="AcquireBaoyueActivity_title">开通会员</string>
    <string name="AcquireBaoyueActivity_fore">—— 会员VIP享四大特权 ——</string>
    <string name="RechargeActivity_keyongyue">可用余额</string>
    <string name="PayActivity_title">选择支付</string>
    <string name="PayActivity_weixin">微信支付</string>
    <string name="PayActivity_zhifubao">支付宝支付</string>
    <string name="PayActivity_querenzhifu">确认支付 ¥: </string>
    <string name="PayActivity_zhifuok">支付成功</string>
    <string name="PayActivity_zhifucuowu">支付发生错误</string>
    <string name="PayActivity_zhifucancle">支付已取消</string>
    <string name="SigninActivity_title">签到</string>
    <string name="SigninActivity_dengluqiandao">登录后才能签到哦</string>
    <string name="SigninActivity_no">不用了</string>
    <string name="SigninActivity_yes">全部加入书架</string>
    <string name="SigninActivity_rule">签到规则</string>
    <string name="TaskCenterActivity_titl">任务中心</string>
    <string name="TaskCenterActivity_lianxuday">您已连续签到</string>
    <string name="TaskCenterActivity_lianxuday_day">天</string>
    <string name="TaskCenterActivity_lianxuday_lianxureward">连续签到最高可获得</string>
    <string name="BookInfoActivity_jiarushujia">加入书架</string>
    <string name="BookInfoActivity_jiarushujias">已加入书架</string>
    <string name="BookInfoActivity_lookpinglun">查看全部评论(%s条)</string>
    <string name="BookInfoActivity_nopinglun">暂无评论点击抢沙发</string>
    <string name="BookInfoActivity_renpinglun">人评论</string>
    <string name="BookInfoActivity_startyuedu">开始阅读</string>
    <string name="BookInfoActivity_xieshuping">写评论</string>
    <string name="BookInfoActivity_mulu">目录</string>
    <string name="BookInfoActivity_newshuping">最新评论</string>
    <string name="BookInfoActivity_down">下载书籍</string>
    <string name="BookInfoActivity_downn">下载</string>
    <string name="BookInfoActivity_down_title">选择需要下载的章节</string>
    <string name="BookInfoActivity_down_manger">下载缓存</string>
    <string name="BookInfoActivity_down_yixiazai">已下载</string>
    <string name="BookInfoActivity_down_delete">删除</string>
    <string name="BookInfoActivity_down_open">打开</string>
    <string name="BookInfoActivity_down_adddown">已添加下载队列</string>
    <string name="BookInfoActivity_down_downcomplete">下载已完成</string>
    <string name="BookInfoActivity_down_downcompleteSize">下载完成</string>
    <string name="BookInfoActivity_down_nobooks">还没有下载记录</string>
    <string name="CommentListActivity_title">评论详情</string>
    <string name="CommentListActivity_nopinglun">暂无评论</string>
    <string name="CommentListActivity_some">写点什么吧</string>
    <string name="CommentListActivity_success">评论成功</string>
    <string name="CommentListActivity_pinglun">评论</string>
    <string name="CommentListActivity_huifu">回复 @</string>
    <string name="BindPhoneActivity_title">绑定手机号</string>
    <string name="LoginActivity_title">手机号快捷登录</string>
    <string name="LoginActivity_denglu">登录</string>
    <string name="LoginActivity_weixin">微信登录</string>
    <string name="LoginActivity_agree">点击登录即表示已同意「大众免费阅读」</string>
    <string name="LoginActivity_xieyi">《软件许可及服务协议》</string>
    <string name="LoginActivity_code">验证码</string>
    <string name="LoginActivity_getcode">获取验证码</string>
    <string name="LoginActivity_getcodeing"> 正在获取验证码，请稍候</string>
    <string name="LoginActivity_phoneerrpr">手机号码格式不正确</string>
    <string name="LoginActivity_codenull">验证码为空</string>
    <string name="LoginActivity_againsend">秒后可重新发送</string>
    <string name="LoginActivity_againgetcode">重新获取验证码</string>
    <string name="ReadActivity_zhichizhnegban">支持正版</string>
    <string name="ReadActivity_buy">确定购买</string>
    <string name="ReadActivity_buys">批量购买更优惠</string>
    <string name="ReadActivity_yue">账户余额</string>
    <string name="ReadActivity_price">实付：</string>
    <string name="ReadActivity_oprice">原价：</string>
    <string name="ReadActivity_benzhangbuy">从本章开始购买</string>
    <string name="ReadActivity_chongzhibuy">充值并购买</string>
    <string name="ReadActivity_liangdu">亮度</string>
    <string name="ReadActivity_closead">去广告</string>
    <string name="ReadActivity_startpage">不能在往前翻了</string>
    <string name="ReadActivity_chapterfail">没有更多内容了</string>
    <string name="ReadActivity_endpage">全书完</string>
    <string name="ReadActivity_buysuccess">购买成功</string>
    <string name="ReadActivity_buyed">已订阅</string>
    <string name="ReadActivity_buysuccessyidown">购买成功已添加下载</string>
    <string name="ReadActivity_addbookself">是否加入书架</string>
    <string name="ReadActivity_addbookselfno">再看看</string>
    <string name="ReadActivity_closeautoread">关闭自动阅读</string>
    <string name="AboutActivity_weixin">微信</string>
</resources>